Fixed overflow issue, now search input box is centered.

--- a/src/client/styles/components/_search.scss
+++ b/src/client/styles/components/_search.scss
@@ -174,6 +174,7 @@
   position: relative;
   text-align: left;
   width: 100%;
+  overflow: hidden;
 
   .icon {
     background-color: #FFFFFF;
